# CasioParticuleFramework

./: .gitignore
Assets/assets-cg/: fxconv-metadata.txt
Assets/assets-cg/Fonts/: fxconv-metadata.txt
Assets/assets-cg/Images/: fxconv-metadata.txt
Libs/DistributionCases/BOPTI_IMG/: image.c  image.h
Libs/DistributionCases/CASIO/: MyKeyboard.c  MyKeyboard.h
Libs/DistributionCases/PSP/MyKeyboard/: MyKeyboard.c
Libs/DistributionCases/PSP/common/: callbacks.c  common-sce.c  common-sce.h  image.c  image.h
Libs/Essential/: Includes.py
Libs/Essential/Dict/: Dict.c  Dict.h
Libs/Essential/List/: List.c  List.h
Libs/Essential/Tuple/: Tuple.c  Tuple.h
Libs/ParticuleEngine/: Includes.py
Libs/ParticuleEngine/All/include/essential/: ParticuleEngineAsset.h  ParticuleEngineDraw.h  ParticuleEngineEssential.h  ParticuleEngineFont.h  ParticuleEngineFunction.h  ParticuleEngineGraphic.h  ParticuleEngineInput.h  ParticuleEngineScreen.h  ParticuleEngineTexture.h  ParticuleEngineType.h
Libs/ParticuleEngine/All/src/essential/: ParticuleEngineAsset.c  ParticuleEngineFunction.c  ParticuleEngineType.c
Libs/ParticuleEngine/CasioCg/essential/: ParticuleEngineDraw.c  ParticuleEngineFont.c  ParticuleEngineInput.c  ParticuleEngineOverwrited.h  ParticuleEngineScreen.c  ParticuleEngineTexture.c
Libs/ParticuleEngine/Psp/essential/: ParticuleEngineDraw.c  ParticuleEngineFont.c  ParticuleEngineInput.c  ParticuleEngineOverwrited.h  ParticuleEngineScreen.c  ParticuleEngineTexture.c
Libs/ParticuleEngine/WindowsLinux/essential/: ParticuleEngineDraw.c  ParticuleEngineFont.c  ParticuleEngineInput.c  ParticuleEngineOverwrited.h  ParticuleEngineScreen.c  ParticuleEngineTexture.c
Make/: BaseDistribution.py  BaseIncludes.py  BaseMakefile.py  Essentials.py  Make.py  Makefile  config.json
Make/Distributions/CasioCG/: CMakeLists.txt  CasioCG.py
Make/Distributions/CasioCG/templates/: Resources.c  Resources.h
Make/Distributions/Linux/: Linux.py  Makefile
Make/Distributions/PSP/: Makefile  PSP.py
Make/Distributions/Windows/: Makefile  Windows.py
Make/DistributionsNotFinish/CasioFX/: CasioFX.py
Make/DistributionsNotFinish/N3DS/: Makefile  N3DS.py
Make/DistributionsNotFinish/NDS/: Makefile  NDS.py
Make/DistributionsNotFinish/PSP/: PSP.py
Make/Plugins/ConvertImageCg/: Plugin.py  fxconv.py
Sources/src/: main.c
